--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 # Project exclude paths
 /data_input/
+/data_input/
+/data_input/data/
+/data_input/data_example/
+/data_input/ML/
+/data_output/
+/data_output/step_0_get_file_names/
+/data_output/step_1_reading_data/
+/data_output/step_2_group_data/
+/data_output/step_3_rate_data/
