--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ ipython-genutils==0.2.0
 joblib==1.0.0
 lazypredict==0.2.9
 Markdown==3.3.4
-pandas-profiling==2.3.0
+# pandas-profiling==2.3.0
 pep8==1.7.1
 #pickle5==0.0.9
 pickleshare==0.7.5
@@ -19,10 +19,15 @@ scikit-learn==0.23.1
 scipy==1.5.4
 seaborn==0.9.0
 sklearn==0.0
-streamlit==0.84.1
+streamlit~=1.17.0
 streamlit-analytics==0.2.2
 streamlit-metrics==0.1.0
 streamlit-pandas-profiling==0.1.2
 text-unidecode==1.2
 unicodecsv==0.14.1
 xgboost==1.1.1
+pandas~=1.3.5
+numpy~=1.19.1
+plotly~=4.14.3
+catboost~=1.0.6
+matplotlib~=3.5.3
